--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "13.4.0",
     "@types/fontfaceobserver": "^2.1.0",
     "@types/jest": "^27.5.2",
+    "@types/mui-image": "1.0.1",
     "@types/node": "^14.18.27",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
@@ -41,6 +42,7 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.1.1",
     "lint-staged": "13.0.3",
+    "mui-image": "1.0.7",
     "node-plop": "0.26.3",
     "plop": "2.7.6",
     "prettier": "2.7.1",
