--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@fontsource/roboto": "4.5.8",
+    "@fortawesome/fontawesome-free": "6.4.0",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
@@ -51,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-i18next": "11.18.6",
+    "react-icons": "4.8.0",
     "react-is": "18.2.0",
     "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
