--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "fontfaceobserver": "2.3.0",
+    "html2canvas": "1.4.1",
     "husky": "8.0.1",
     "i18next": "21.9.2",
     "i18next-browser-languagedetector": "6.1.5",
@@ -42,6 +43,7 @@
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.1.1",
+    "konva": "8.4.3",
     "lint-staged": "13.0.3",
     "mui-image": "1.0.7",
     "node-plop": "0.26.3",
@@ -54,6 +56,7 @@
     "react-i18next": "11.18.6",
     "react-icons": "4.8.0",
     "react-is": "18.2.0",
+    "react-konva": "18.2.5",
     "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
@@ -72,6 +75,7 @@
     "sweetalert2": "11.7.3",
     "ts-node": "10.9.1",
     "typescript": "4.6.4",
+    "use-image": "1.1.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
