--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.18.0",
+    "bootstrap": "5.2.3",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.5.0",
@@ -51,6 +52,7 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
+    "react-bootstrap": "2.7.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-i18next": "11.18.6",
@@ -138,6 +140,5 @@
         "statements": 90
       }
     }
-  },
-  "devDependencies": {}
+  }
 }
