--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@fontsource/roboto": "4.5.8",
-    "@fortawesome/fontawesome-free": "6.4.0",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-solid-svg-icons": "6.4.0",
-    "@fortawesome/react-fontawesome": "0.2.0",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.11.16",
     "@reduxjs/toolkit": "1.8.5",
@@ -82,7 +78,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:prod": "yarn run build && serve -s build",
