--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.18.0",
+    "axios": "1.3.5",
     "bootstrap": "5.2.3",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
@@ -59,6 +60,7 @@
     "react-icons": "4.8.0",
     "react-is": "18.2.0",
     "react-konva": "18.2.5",
+    "react-query": "3.39.3",
     "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
@@ -74,6 +76,7 @@
     "stylelint-config-recommended": "9.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "sweetalert": "2.1.2",
     "sweetalert2": "11.7.3",
     "ts-node": "10.9.1",
     "typescript": "4.6.4",
